# flows-connector

./: .gitignore  Cargo.toml  README.md
airtable/: Cargo.toml
airtable/src/: connect.html  main.rs
cloudinary/: Cargo.toml
cloudinary/src/: connect.html  main.rs
cloudniary/: Cargo.toml
cloudniary/src/: main.rs
discord/: Cargo.toml
discord/src/: main.rs
dropbox/: Cargo.toml
dropbox/src/: main.rs
genereq/: Cargo.toml
genereq/src/: connect.html  main.rs
genereq/wasm/: Cargo.toml
github/: Cargo.toml
github/codegen/: Cargo.toml
github/codegen/src/: element.rs  lib.rs  utils.rs
github/codegen/src/actions/: impl_macro_actions.rs  mod.rs
github/codegen/src/events/: impl_macro_events.rs  mod.rs
github/codegen/src/reqs/: impl_macro_reqs.rs  mod.rs
github/src/: events.csv  events.json  fetch_github.rs  global.rs  lib.rs  main.rs  models.rs  routes.rs  utils.rs
github/src/routes/: actions.rs  auth.rs  create_hook.rs  event.rs  hook_events.rs  installations.rs  post.rs  repos.rs  revoke_hook.rs
gitlab/: Cargo.toml
gitlab/src/: main.rs
gmail/: Cargo.toml
gmail/src/: main.rs
google-form/: Cargo.toml
google-form/src/: main.rs
googleform/: Cargo.toml
googleform/src/: connect.html  main.rs
jira/: Cargo.toml
jira/src/: main.rs
monday/: Cargo.toml
monday/src/: connect.html  main.rs
notion/: Cargo.toml
notion/src/: main.rs
reminder/: Cargo.toml
reminder/src/: main.rs
rsa-generator/: Cargo.toml
rsa-generator/src/: main.rs
sendgrid/: Cargo.toml
sendgrid/src/: connect.html  main.rs
sendgrid/wasm/: Cargo.toml
sendgrid/wasm/src/: lib.rs
slack/: Cargo.toml
slack/src/: actions.json  events.json  global.rs  lib.rs  main.rs  models.rs  routes.rs  utils.rs
slack/src/data/: events.json
slack/src/routes/: auth.rs  channels.rs  event.rs  inter.rs  join_channel.rs  list_actions.rs  list_events.rs  post.rs
slack/wasm/: Cargo.toml
slack/wasm/src/: auth.rs  channels.rs  event.rs  lib.rs  post.rs
telegram/: Cargo.toml
telegram/src/: connect.html  main.rs
twilio/: Cargo.toml
twilio/src/: connect.html  main.rs
twitter/: Cargo.toml
twitter/src/: connect.html  main.rs
weather/: Cargo.toml
weather/src/: main.rs
