[package]
name = "airtable-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
axum = { version = "0.5.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rsa = "0.6.0"
rand = "0.8.5"
rand_chacha = "0.3"
hex = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = { version = "2.1.2" }
