[package]
name = "github-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
openssl = "0.10.0"
hex = "0.4.0"
jsonwebtoken = "8.1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
axum = { version="0.5", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }