[package]
name = "notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
axum = { version = "0.5.13", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
openssl = "0.10.0"
hex = "0.4.0"
urlencoding = "2.1.0"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
