[package]
name = "sendgrid-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "3", features = ["rustls"] }
awc = "2"
lazy_static = "1.4.0"
hex = "0.4.0"
urlencoding = "2.1.0"
regex = "1.5"
rsa = "0.6.0"
rand = "0.8"
rand_chacha = "0.3"