[package]
name = "twilio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
axum = { version="0.5" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
regex = "1.5"
hex = "0.4.0"
rsa = "0.6.0"
rand = "0.8"
rand_chacha = "0.3"
