[package]
name = "twitter-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
lazy_static = "1.4.0"
hex = "0.4.0"
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
oauth1 = { version = "1.0.0" }
axum = { version="0.5.13", features = ["multipart"] }
tokio = { version = "1.20.0", features = ["full"] }
rsa = "0.7.0"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.13.0"
hmac-sha256 = "1.1.4"
