[package]
name = "sendgrid-connector-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sendgrid_connector"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4.0"
rsa = "0.6.0"
hex = "0.4.0"
url = "2"
rand = "0.8"
rand_chacha = "0.3"
wasmedge-bindgen = "0.1"
wasmedge-bindgen-macro = "0.1"
wasmhaiku-glue = "0.1.0"