[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.103", features = ["full", "fold"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
rust-format = { version = "0.3.4", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_with = "2.0.1"
openapiv3 = "1.0.1"
indexmap = "1.9.2"
itertools = "0.10.5"

[features]
debug_mode = ["rust-format"]

[lib]
proc-macro = true
