[package]
name = "sendgrid-connector-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sendgrid_connector"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-wasi-helper = "0"
wasmedge-bindgen = "0.1"
wasmedge-bindgen-macro = "0.1"